--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -1,12 +1,6 @@
-<p>footer works!</p>
-<div class="card">
-    <div class="card-header">
-      Quote
-    </div>
-    <div class="card-body">
-      <blockquote class="blockquote mb-0">
-        <p>A well-known quote, contained in a blockquote element.</p>
-        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-      </blockquote>
-    </div>
+<footer class="footer" >
+  <div class="footer-content">
+    <p>eeeeeeeee</p>
+    <p>🐶  🐱</p>
   </div>
+</footer>
