--- a/src/app/Shared/navbar/navbar.component.html
+++ b/src/app/Shared/navbar/navbar.component.html
@@ -1,45 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-
-    <li>
-      <a [routerlink]="['/carrito']">
-        <i class="bi bi-cart"></i>
-        <span *ngIf="cantidadProducto > 0"></span>
-        ({{cantidadProductos}})
-        </a>
-    </li>
+<nav class="navbar">
+  <div class="navbar-logo">
+    <a routerLink="/" class="logo">TITULO</a>
   </div>
+  <ul class="navbar-links">
+    <li><a routerLink="/">Inicio</a></li>
+    <li><a routerLink="/productos">Comidas</a></li>
+    <li><a routerLink="/contacto">Contacto</a></li>
+    <li class="carrito-link">
+      <a [routerLink]="['/carrito']">
+        <i class="bi bi-cart"></i>
+        Carrito <span *ngIf="cantidadProductos > 0">({{cantidadProductos}})</span>
+      </a>
+    </li>
+  </ul>
 </nav>
