--- a/src/app/inicio/inicio/inicio.component.html
+++ b/src/app/inicio/inicio/inicio.component.html
@@ -1,1 +1,39 @@
-<p>inicio works!</p>
+<div id="carouselGenoma" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/gattitos.jpg" class="d-block w-100" alt="gatos">
+        <div class="carousel-caption d-block">
+          <h5>GENOMA BARF</h5>
+          <p>Alimentación natural y balanceada para tus gatos</p>
+          <a routerLink="/productos" class="btn-carousel">Ver productos</a>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/gatos.jpg" class="d-block w-100" alt="comiendogato">
+        <div class="carousel-caption d-block">
+          <h5>Comida fresca y saludable</h5>
+          <p>Nutrición BARF adaptada a tu mascota</p>
+          <a routerLink="/contacto" class="btn-carousel">Contáctanos</a>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/masgatos.jpg" class="d-block w-100" alt="Gato comiendo">
+        <div class="carousel-caption d-block">
+          <h5>Envíos a domicilio</h5>
+          <p>Recibe tu pedido en casa con total comodidad</p>
+          <a routerLink="/carrito" class="btn-carousel">Ir al carrito</a>
+        </div>
+      </div>
+    </div>
+  
+    <!-- Controles -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselGenoma" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselGenoma" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Siguiente</span>
+    </button>
+  </div>
+  
