--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -1,5 +1,5 @@
 <h1> Carrito de Compras</h1>
- <div *ngIf = "ProductosEnCarrito.length === 0">
+ <div *ngIf = "ProductosEnCarrito === 0">
      <p>No hay productos en el Carrito</p>
  </div>
  
@@ -20,7 +20,7 @@
              <td><img [src] = "item.producto.imagen" alt="{{item.producto.nombre}}" style="width: 50px; height: 50px;"></td>
              <td>{{ item.producto.imagen }}</td>
              <td>{{ item.producto.descripcion }}</td>
-             <td>{{ item.producto.precio | currency }}</td>
+             <td>{{ item.producto.precio}}</td>
              <td>
                  <button (click) ="quitarCantidad(i)">-</button>
                  {{item.cantidad}}
