--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -1,6 +1,8 @@
-<footer class="footer" >
-  <div class="footer-content">
-    <p>eeeeeeeee</p>
-    <p>🐶  🐱</p>
+<footer>
+  <div class="footer-text">© 2025 TuEmpresa. Todos los derechos reservados.</div>
+  <div>
+    <a href="/">Inicio</a> |
+    <a href="#">Acerca de</a> |
+    <a href="/contacto">Contacto</a>
   </div>
 </footer>
