--- a/src/app/productos/productos.component.css
+++ b/src/app/productos/productos.component.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 .card {
-  background-color: #2f2b31; /* Violeta oscuro */
+  background-color: #2f2b31; 
   color: #fff;
   border-radius: 10px;
   width: 280px;
