--- a/src/app/Shared/navbar/navbar.component.html
+++ b/src/app/Shared/navbar/navbar.component.html
@@ -1,10 +1,28 @@
 <nav class="navbar">
-  <div class="navbar-logo">
-     <a routerLink="/">
-      <img src="assets/genoma logo.jpg" alt="Genoma Barf Logo" class="logo-img" />
+  <!-- Menú desplegable a la izquierda -->
+  <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="menuDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+      ☰ Menú
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="menuDropdown">
+      <li><a class="dropdown-item" routerLink="/">Inicio</a></li>
+      <li><a class="dropdown-item" routerLink="/productos">Comidas</a></li>
+      <li><a class="dropdown-item" routerLink="/contacto">Contacto</a></li>
+      <li><a class="dropdown-item" routerLink="/favoritos">Favoritos</a></li>
+      <li><a class="dropdown-item" routerLink="/carrito">Carrito</a></li>
+    </ul>
+  </div>
+
+  <!-- Logo y título -->
+  <div class="navbar-logo ms-3">
+    <a routerLink="/">
+      <img src="" alt="" class="logo-img" />
+      <span>TITULO</span>
     </a>
   </div>
-  <ul class="navbar-links">
+
+  <!-- Enlaces a la derecha -->
+  <ul class="navbar-links ms-auto">
     <li><a routerLink="/">Inicio</a></li>
     <li><a routerLink="/productos">Comidas</a></li>
     <li><a routerLink="/contacto">Contacto</a></li>
@@ -12,7 +30,7 @@
     <li class="carrito-link">
       <a [routerLink]="['/carrito']">
         <i class="bi bi-cart"></i>
-        Carrito <span *ngIf="cantidadProductos > 0">({{cantidadProductos}})</span>
+        Carrito <span *ngIf="cantidadProductos > 0">({{ cantidadProductos }})</span>
       </a>
     </li>
   </ul>
