--- a/src/app/favoritos/favoritos.component.html
+++ b/src/app/favoritos/favoritos.component.html
@@ -1,10 +1,5 @@
 <h1>Mis Productos Favoritos</h1>
 
-<!-- Si no hay productos en favoritos -->
-<div *ngIf="productosEnFavorito.length === 0">
-  <p>No hay productos en favoritos.</p>
-</div>
-
 <!-- Si hay productos -->
 <div *ngIf="productosEnFavorito.length > 0">
   <table class="table">
@@ -14,30 +9,29 @@
         <th>Nombre</th>
         <th>Descripción</th>
         <th>Precio</th>
-        <th>Cantidad</th>
         <th>Acciones</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of productosEnFavorito; let i = index">
+      <tr *ngFor="let item of productosEnFavorito">
         <td><img [src]="item.producto.imagen" alt="{{item.producto.nombre}}" style="width: 50px; height: 50px;"></td>
         <td>{{ item.producto.nombre }}</td>
         <td>{{ item.producto.descripcion }}</td>
-        <td>{{ item.producto.precio }}</td>
+        <td>{{ item.producto.precio | currency }}</td>
         <td>
-          <button (click)="quitarCantidad(i)">−</button>
-          {{ item.cantidad }}
-          <button (click)="agregarCantidad(i)">+</button>
-        </td>
-        <td>
-          <button (click)="eliminarFavorito(item.producto.id)">Eliminar</button>
+          <button (click)="eliminarFavorito(item.producto.id)" class="btn btn-danger">Eliminar</button>
         </td>
       </tr>
     </tbody>
   </table>
 
-  <div class="acciones">
+  <div class="acciones mt-3">
     <button (click)="vaciarFavorito()" class="btn btn-secondary">Vaciar Favoritos</button>
     <button (click)="realizarFavorito()" class="btn btn-primary">Confirmar Favoritos</button>
   </div>
+</div>
+
+
+<div *ngIf="productosEnFavorito.length === 0">
+  <p>No hay productos en favoritos.</p>
 </div>
