--- a/src/app/inicio/inicio/inicio.component.html
+++ b/src/app/inicio/inicio/inicio.component.html
@@ -8,7 +8,7 @@
   <div class="cards-container">
 
     <div class="card" tabindex="0" aria-describedby="desc1">
-      <img class="card-image" src="assets/guitarraJacksonroja.png" alt="Fender Stratocaster">
+      <img class="card-image" src="assets/guitarra.jpg" alt="Fender Stratocaster">
       <div class="card-content">
         <h2 id="desc1">Fender Stratocaster</h2>
         <p>Un clásico icónico con sonido brillante y versátil, perfecto para rock, blues y más.</p>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="card" tabindex="0" aria-describedby="desc2">
-      <img class="card-image" src="assets/guitarraJackson.png" alt="Gibson Les Paul">
+      <img class="card-image" src="assets/guitarra2.jpg" alt="Gibson Les Paul">
       <div class="card-content">
         <h2 id="desc2">Gibson Les Paul</h2>
         <p>Con cuerpo sólido y sustain increíble, ideal para hard rock y heavy metal.</p>
@@ -31,17 +31,18 @@
       <img class="card-image" src="assets/guitarraJacksonJS1X.png" alt="Ibanez RG">
       <div class="card-content">
         <h2 id="desc3">Ibanez RG</h2>
-        <p>Diseñada para velocidad y precisión, favorita entre guitarristas de metal y shred.</p>
+        <p>Diseñada para velocidad y precisión, favorita entre guitarristas de metal.</p>
         <p><strong>Precio:</strong> $900 USD</p>
         <a href="#" class="btn" role="button">Comprar</a>
       </div>
     </div>
 
     <div class="card" tabindex="0" aria-describedby="desc4">
-      <img class="card-image" src="/assets/prs.jpg" alt="PRS Custom 24">
+      
+      <img class="card-image" src="assets/guitarra4.png" alt="PRS Custom 24">
       <div class="card-content">
         <h2 id="desc4">PRS Custom 24</h2>
-        <p>Elegancia y versatilidad con acabados premium, ideal para estudios y escenarios.</p>
+        <p>Elegancia y versatilidad con acabados premium, ideal para estudios.</p>
         <p><strong>Precio:</strong> $2500 USD</p>
         <a href="#" class="btn" role="button">Comprar</a>
       </div>
