--- a/src/app/Shared/footer/footer.component.css
+++ b/src/app/Shared/footer/footer.component.css
@@ -4,7 +4,7 @@ body {
 }
 
 footer {
-  background-color: #1d122b;
+  background-color: #000000;
   color: #fff;
   padding: 20px 0;
   text-align: center;
