--- a/src/app/productos/productos.component.css
+++ b/src/app/productos/productos.component.css
@@ -8,7 +8,7 @@ body {
 h1 {
   text-align: center;
   margin-top: 30px;
-  color: #000000; /* Color de texto productos */
+  color: #ccc; 
 }
 
 .card-container {
