--- a/src/app/paginas/compra/compra.component.html
+++ b/src/app/paginas/compra/compra.component.html
@@ -1,1 +1,118 @@
-<p>compra works!</p>
+<h2 class="text-center mb-4">Formulario de compra</h2>
+
+<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
+    <!-- Campos del formulario -->
+    <div class="row g-3 mb-3">
+        <div class="col-md-6">
+            <label for="nombre" class="form-label fw-semibold">nombre <span class="text-danger">*</span></label>
+            <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
+                <input id="nombre" formControlName="nombre" class="form-control" placeholder="tu nombre completo">
+            </div>
+            <div *ngIf="formularioCompra.get('nombre')?.touched && formularioCompra.get('nombre')?.invalid" class="form-text text text-danger"></div>
+        </div>
+        <h2 class="text-center mb-4">Formulario de compra</h2>
+
+<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
+    <!-- Campos del formulario -->
+        <div class="col-md-6">
+            <label for="telefono" class="form-label fw-semibold">numero telefonico <span class="text-danger">*</span></label>
+            <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
+                <input id="telefono" formControlName="telefono" class="form-control" placeholder="tu numero telefonico">
+            </div>
+            <div *ngIf="formularioCompra.get('telefono')?.touched && formularioCompra.get('telefono')?.invalid" class="form-text text text-danger"></div>
+
+<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
+    <!-- Campos del formulario -->
+        <div class="col-md-6">
+            <label for="correo" class="form-label fw-semibold">correo <span class="text-danger">*</span></label>
+            <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-envelope-fill"></i></span>
+                <input id="correo" formControlName="correo" class="form-control" placeholder="tu correo" type="email">
+            </div>
+            <div *ngIf="formularioCompra.get('nombre')?.touched && formularioCompra.get('nombre')?.invalid" class="form-text text text-danger"></div>
+
+<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
+    <!-- Campos del formulario -->
+        <div class="col-md-6">
+            <label for="codigo postal" class="form-label fw-semibold">codigo postal <span class="text-danger">*</span></label>
+            <div class="input-group">
+                <input id="codigo postal" formControlName="codigo postal" class="form-control" placeholder="tu codigo postal">
+            </div>
+            <div *ngIf="formularioCompra.get('codigo postal')?.touched && formularioCompra.get('codigo postal')?.invalid" class="form-text text text-danger"></div>
+
+<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
+    <!-- Campos del formulario -->
+        <div class="col-md-6">
+            <label for="direccion" class="form-label fw-semibold">direccion <span class="text-danger">*</span></label>
+            <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-geo-alt-fill"></i></span>
+                <input id="direccion" formControlName="direccion" class="form-control" placeholder="tu direccion">
+            </div>
+            <div *ngIf="formularioCompra.get('direccion')?.touched && formularioCompra.get('direccion')?.invalid" class="form-text text text-danger"></div>
+
+<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
+    <!-- Campos del formulario -->
+        <div class="col-md-6">
+            <label for="provincia" class="form-label fw-semibold">provincia <span class="text-danger">*</span></label>
+            <div class="input-group">
+                <input id="provincia" formControlName="provincia" class="form-control" placeholder="tu provincia">
+            </div>
+            <div *ngIf="formularioCompra.get('provincia')?.touched && formularioCompra.get('provincia')?.invalid" class="form-text text text-danger"></div>
+
+<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
+    <!-- Campos del formulario -->
+        <div class="col-md-6">
+            <label for="ciudad" class="form-label fw-semibold">ciudad <span class="text-danger">*</span></label>
+            <div class="input-group">
+                <input id="ciudad" formControlName="ciudad" class="form-control" placeholder="tu ciudad">
+            </div>
+            <div *ngIf="formularioCompra.get('ciudad')?.touched && formularioCompra.get('ciudad')?.invalid" class="form-text text text-danger"></div>
+        </div>
+    </div>
+
+</form>
+<!-- modal pdf -->
+ <div
+ *ngIf="mostrarmodal"
+ class="modal show d-block"
+ tabindex="-1"
+ role="dialog"
+ style="background: rgba(0, 0, 0, 5);"
+ >
+ <div class="modal-dialog modal-x1"
+ role="document"
+ style="max-width: 90vw; max-height: 90vh;"
+ >
+<div class="modal-content" style="height: 90vh;"></div>
+    <div class="modal-header">
+        <h5 class="modal-title">FACTURA DEL PDF</h5>
+        <button
+            type="button"
+            class="btn-close"
+            aria-label="cerrar"
+            (click)="cerrarModal()"
+        ></button>
+    </div>
+    <div>
+        <div class="modal-body p-0" style="height: 80vh;">
+            <iframe
+            *ngIf="pdfSrc"
+            [src]="pdfSrc"
+            id="pdfFrame"
+            style="width: 100%; height: 100%; border: none;"
+            ></iframe>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-succes" (click)="imprimirPDF()">
+                    Imprimir
+                </button>
+                <button type="button" class="btn btn-secondary" (click)="cerrarModal()"></button>
+            </div>
+        </div>
+    </div>
+</div>
+></div>
+</div>
+</div>
