--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,4 +1,6 @@
 <h1>Productos</h1>
+
+<!-- Sección de guitarras -->
 <div class="card-container">
   <ng-container *ngIf="productos && productos.length">
     <ng-container *ngFor="let producto of productos">
@@ -7,11 +9,34 @@
         <img [src]="producto.imagen" alt="{{producto.nombre}}" class="product-image">
         <h2>{{producto.nombre}}</h2>
         <p>{{producto.descripcion}}</p>
-        <p>PRECIO: {{producto.precio}}</p>
+        <p>PRECIO: {{producto.precio | currency:'ARS' }}</p>
+        <p class="cuotas">
+          <i class="bi bi-credit-card"></i> CUOTA SIMPLE 3 cuotas de $685.672 ($2.057.016)
+        </p>
         <button type="button" class="btn btn-outline-primary" (click)="agregar(producto)">
           Agregar al carrito
         </button>
       </div>
     </ng-container>
+  </ng-container>
+</div>
+
+<!-- Sección de amplificadores -->
+<h2 style="margin-top: 60px;">Amplificadores</h2>
+<div class="card-container">
+  <ng-container *ngFor="let amp of amplificadores">
+    <div *ngIf="amp.disponibilidad" class="card">
+      <span class="favorito-icon" (click)="agregarAFavoritos(amp)" title="Agregar a favoritos">♡</span>
+      <img [src]="amp.imagen" alt="{{amp.nombre}}" class="product-image">
+      <h2>{{amp.nombre}}</h2>
+      <p>{{amp.descripcion}}</p>
+      <p>PRECIO: {{amp.precio | currency:'ARS' }}</p>
+       <p class="cuotas">
+          <i class="bi bi-credit-card"></i> CUOTA SIMPLE 3 cuotas de $685.672 ($2.057.016)
+        </p>
+      <button type="button" class="btn btn-outline-primary" (click)="agregar(amp)">
+        Agregar al carrito
+      </button>
+    </div>
   </ng-container>
 </div>
