--- a/src/app/inicio/inicio/inicio.component.css
+++ b/src/app/inicio/inicio/inicio.component.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
+
+.intro-section h1,
+.intro-section p {
+  font-family: 'Pirata One', cursive;
+  color: #444;
+  text-align: center;
+  text-shadow: 1px 1px 3px #000;
+  margin: 0;
+}
+
+.intro-section h1 {
+  font-size: 2rem; /* tamaño más grande para el título */
+}
+
+.intro-section p {
+  font-size: 1.2rem; /* tamaño más grande para el párrafo */
+  margin-top: 2px;
+  margin-bottom: 8px;
+  color: #666;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -17,25 +39,6 @@ body {
     max-width: 1200px;
     margin: 50px auto;
     padding: 0 20px;
-}
-
-.intro-section {
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.intro-section h1 {
-    font-size: 1.6rem;
-    /* más pequeño */
-}
-
-.intro-section p {
-    font-size: 0.9rem;
-    /* más pequeño */
-    color: #aaa;
-    max-width: 600px;
-    margin: 0 auto;
-    line-height: 1.6;
 }
 
 .cards-container {
