--- a/src/app/productos/productos.component.css
+++ b/src/app/productos/productos.component.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
+
 
 * {
   margin: 0;
@@ -14,7 +14,7 @@ body {
 }
 
 .titulo-seccion {
-  font-family: 'Pirata One', cursive;
+  font-family: 'UnifrakturCook', cursive;
   font-size: 2.5rem;
   color: #8d8d8d;
   text-align: center;
