--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: #1b1b1b;
+    background-color: #121212;
     color: #ddd;
     margin: 0;
 }
