--- a/src/app/Shared/navbar/navbar.component.html
+++ b/src/app/Shared/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg">
 
   <!-- Menú desplegable a la izquierda -->
@@ -14,13 +15,12 @@
       <li><a class="dropdown-item" routerLink="/carrito">Carrito</a></li>
     </ul>
   </div>
-
+  
   <!-- Logo -->
-  <div class="navbar-logo me-auto">
-    <a routerLink="/inicio">
-      <img src="assets/logoU.png" alt="Logo" class="logo-img" />
-    </a>
-  </div>
+ <div class="tituloTitulo">
+  <a routerLink="/">Under</a>
+</div>
+
 
   <!-- Enlaces a la derecha -->
   <ul class="navbar-nav ms-auto d-flex flex-row align-items-center list-unstyled gap-3">
