--- a/src/app/paginas/compra/compra.component.html
+++ b/src/app/paginas/compra/compra.component.html
@@ -1,118 +1,136 @@
-<h2 class="text-center mb-4">Formulario de compra</h2>
-
-<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
-    <!-- Campos del formulario -->
+<h2 class="text-center mb-4">Formulario de Compra</h2>
+<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width:600px;">
+    <!-- Campos del Formulario-->
     <div class="row g-3 mb-3">
         <div class="col-md-6">
-            <label for="nombre" class="form-label fw-semibold">nombre <span class="text-danger">*</span></label>
+            <label for="nombre" class="form-label fw-semibold">Nombre <span class="text-danger">*</span></label>
             <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
-                <input id="nombre" formControlName="nombre" class="form-control" placeholder="tu nombre completo">
+                <input id="nombre" formControlName="nombre" class="form-control" placeholder="Tu Nombre Completo">
             </div>
-            <div *ngIf="formularioCompra.get('nombre')?.touched && formularioCompra.get('nombre')?.invalid" class="form-text text text-danger"></div>
+            <div *ngIf="formularioCompra.get('nombre')?.touched && formularioCompra.get('nombre')?.invalid"
+                class="form-text text danger">
+                el nombre es obligatorio.
+            </div>
         </div>
-        <h2 class="text-center mb-4">Formulario de compra</h2>
 
-<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
-    <!-- Campos del formulario -->
         <div class="col-md-6">
-            <label for="telefono" class="form-label fw-semibold">numero telefonico <span class="text-danger">*</span></label>
+            <label for="telefono" class="form-label fw-semibold">Telefono <span class="text-danger">*</span></label>
             <div class="input-group">
-                <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
-                <input id="telefono" formControlName="telefono" class="form-control" placeholder="tu numero telefonico">
+                <span class="input-group-text"><i class="bi bi-telephone-fill"></i></span>
+                <input id="telefono" formControlName="telefono" class="form-control"
+                    placeholder="Ej: +54 9 11 1234 5678">
             </div>
-            <div *ngIf="formularioCompra.get('telefono')?.touched && formularioCompra.get('telefono')?.invalid" class="form-text text text-danger"></div>
+            <div *ngIf="formularioCompra.get('telefono')?.touched && formularioCompra.get('telefono')?.invalid"
+                class="form-text text danger">
+                El telefono es obligatorio.
+            </div>
+        </div>
 
-<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
-    <!-- Campos del formulario -->
-        <div class="col-md-6">
-            <label for="correo" class="form-label fw-semibold">correo <span class="text-danger">*</span></label>
+        <div class="mb-3">
+            <label for="correo" class="form-label fw-semibold">Correo Electronico <span
+                    class="text-danger">*</span></label>
             <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-envelope-fill"></i></span>
-                <input id="correo" formControlName="correo" class="form-control" placeholder="tu correo" type="email">
+                <input id="correo" formControlName="correo" type="email" class="form-control"
+                    placeholder="Ejemplo@correo.gmail">
             </div>
-            <div *ngIf="formularioCompra.get('nombre')?.touched && formularioCompra.get('nombre')?.invalid" class="form-text text text-danger"></div>
-
-<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
-    <!-- Campos del formulario -->
-        <div class="col-md-6">
-            <label for="codigo postal" class="form-label fw-semibold">codigo postal <span class="text-danger">*</span></label>
-            <div class="input-group">
-                <input id="codigo postal" formControlName="codigo postal" class="form-control" placeholder="tu codigo postal">
+            <div *ngIf="formularioCompra.get('correo')?.touched && formularioCompra.get('correo')?.invalid"
+                class="form-text text danger">
+                El correo es obligatorio.
             </div>
-            <div *ngIf="formularioCompra.get('codigo postal')?.touched && formularioCompra.get('codigo postal')?.invalid" class="form-text text text-danger"></div>
+        </div>
 
-<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
-    <!-- Campos del formulario -->
-        <div class="col-md-6">
-            <label for="direccion" class="form-label fw-semibold">direccion <span class="text-danger">*</span></label>
+        <div class="mb-3">
+            <label for="direccion" class="form-label fw-semibold">Direccion <span class="text-danger">*</span></label>
             <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-geo-alt-fill"></i></span>
-                <input id="direccion" formControlName="direccion" class="form-control" placeholder="tu direccion">
+                <input id="direccion" formControlName="direccion" class="form-control"
+                    placeholder="Calle, numero, piso, depto" />
             </div>
-            <div *ngIf="formularioCompra.get('direccion')?.touched && formularioCompra.get('direccion')?.invalid" class="form-text text text-danger"></div>
+            <div *ngIf="formularioCompra.get('direccion')?.touched && formularioCompra.get('direccion')?.invalid"
+                class="form-text text danger">
+                La direccion es obligatorio.
+            </div>
+        </div>
+        <div class="row g-3 mb-3">
+            <div class="col-md-4">
+                <label for="ciudad" class="form-label fw-semibold">Ciudad <span class="text-danger">*</span></label>
+                <input id="ciudad" formControlName="ciudad" class="form-control" placeholder="EJ Buenos aires">
+                <div *ngIf="formularioCompra.get('cuidad')?.touched && formularioCompra.get('cuidad')?.invalid"
+                    class="form-text text danger">
+                    La ciudad es obligatoria.
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label for="provincia" class="form-label fw-semibold">provincia <span
+                        class="text-danger">*</span></label>
+                <input id="provincia" formControlName="provincia" class="form-control" placeholder="EJ Buenos aires">
+                <div *ngIf="formularioCompra.get('provincia')?.touched && formularioCompra.get('provincia')?.invalid"
+                    class="form-text text danger">
+                    La provincia es obligatoria.
+                </div>
+            </div>
 
-<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
-    <!-- Campos del formulario -->
-        <div class="col-md-6">
-            <label for="provincia" class="form-label fw-semibold">provincia <span class="text-danger">*</span></label>
-            <div class="input-group">
-                <input id="provincia" formControlName="provincia" class="form-control" placeholder="tu provincia">
+            <div class="col-md-4">
+                <label for="codigoPostal" class="form-label fw-semibold">Codigo Postal<span
+                        class="text-danger">*</span></label>
+                <input id="codigoPostal" formControlName="codigoPostal" class="form-control" placeholder="EJ: 1428">
+                <div *ngIf="formularioCompra.get('codigoPostal')?.touched && formularioCompra.get('codigoPostal')?.invalid"
+                    class="form-text text danger">
+                    El codigo postal es obligatorio.
+                </div>
             </div>
-            <div *ngIf="formularioCompra.get('provincia')?.touched && formularioCompra.get('provincia')?.invalid" class="form-text text text-danger"></div>
+        </div>
 
-<form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width: 600px;">
-    <!-- Campos del formulario -->
-        <div class="col-md-6">
-            <label for="ciudad" class="form-label fw-semibold">ciudad <span class="text-danger">*</span></label>
-            <div class="input-group">
-                <input id="ciudad" formControlName="ciudad" class="form-control" placeholder="tu ciudad">
+        <div class="mb-3">
+            <label for="metodoPago" class=" form-label fw-semibold">Metdo de Pago <span
+                    class="text-danger">*</span></label>
+            <select id="metodoPago" formControlName="metodoPago" class="form-select">
+                <option value="" disabled selected>Seleccione metodo de pago</option>
+                <option value="tarjeta">Tarjeta de Credito/Debito</option>
+                <option value="efectivo">efectivo</option>
+                <option value="transferencia">Transferencia</option>
+            </select>
+            <div *ngIf="formularioCompra.get('metodoPago')?.touched && formularioCompra.get('metodoPago')?.invalid"
+                class="form-text text-danger">
+                Debes seleccionar un metodo de pago
             </div>
-            <div *ngIf="formularioCompra.get('ciudad')?.touched && formularioCompra.get('ciudad')?.invalid" class="form-text text text-danger"></div>
+
+        </div>
+        <div class="d-flex justify-content-between align-items-center my-4">
+            <div>
+                <p>Envio: ${{envio.toFixed(2)}}</p>
+                <p><strong>Total a Pagar : ${{calcularTotal() | number: '1.2-2'}}</strong></p>
+            </div>
+            <button type="submit" class="btn btn-primary">Finalizar Compra</button>
         </div>
     </div>
-
 </form>
-<!-- modal pdf -->
- <div
- *ngIf="mostrarmodal"
- class="modal show d-block"
- tabindex="-1"
- role="dialog"
- style="background: rgba(0, 0, 0, 5);"
- >
- <div class="modal-dialog modal-x1"
- role="document"
- style="max-width: 90vw; max-height: 90vh;"
- >
-<div class="modal-content" style="height: 90vh;"></div>
-    <div class="modal-header">
-        <h5 class="modal-title">FACTURA DEL PDF</h5>
-        <button
-            type="button"
-            class="btn-close"
-            aria-label="cerrar"
-            (click)="cerrarModal()"
-        ></button>
-    </div>
-    <div>
-        <div class="modal-body p-0" style="height: 80vh;">
-            <iframe
-            *ngIf="pdfSrc"
-            [src]="pdfSrc"
-            id="pdfFrame"
-            style="width: 100%; height: 100%; border: none;"
-            ></iframe>
+
+<!--MODAL PDF-->
+<div *ngIf="mostrarModal" class="modal show d-block" tabindex="-1" role="dialog"
+    style="background: rgba(0, 0, 0, 0.5);">
+    <div class="modal-dialog modal-xl" role="document" style="max-width: 90vw; max-height: 90vh;">
+        <div class="modal-content" style="height: 90vh;">
+            <div class="modal-header">
+                <h5 class="modal-title">Factura PDF</h5>
+                <button type="button" class="btn-close" aria-label="cerrar" (click)="cerrarModal()"></button>
+            </div>
+            <div class="modal-body p-0" style="height: 80vh;">
+                <iframe *ngIf="pdfSrc" [src]="pdfSrc" id="pdfFrame"
+                    style="width: 100%; height: 100%; border: none;"></iframe>
+            </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-succes" (click)="imprimirPDF()">
+                <button type="button" class="btn btn-success" (click)="imprimirPDF()">
                     Imprimir
                 </button>
-                <button type="button" class="btn btn-secondary" (click)="cerrarModal()"></button>
+                <button type="button" class="btn btn-secondary" (Click)="cerrarModal()">
+                    Cerrar
+                </button>
             </div>
         </div>
+
     </div>
-</div>
-></div>
-</div>
 </div>
